--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <!-- Resume -->
   <section id="resume" class="bg-gray-100 py-16 px-4 text-center">
     <h3 class="text-2xl sm:text-3xl font-semibold mb-6">Resume</h3>
-    <a href="https://drive.google.com/file/d/1JR3PR0IjShIBoQh_RhCffZxvKuYKoI3L/view?usp=drive_link" download
+    <a href="https://drive.google.com/file/d/1sm1rwA6zn1fYm3942onxmodrvNFbE5oJ/view?usp=sharing" download
       class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-blue-700 transition-all duration-300 ease-in-out"
       style="font-family: 'Poppins', sans-serif;">
       ⬇️ Download My Resume
