--- a/index.html
+++ b/index.html
@@ -169,12 +169,74 @@
   <!-- Resume -->
   <section id="resume" class="bg-gray-100 py-16 px-4 text-center">
     <h3 class="text-2xl sm:text-3xl font-semibold mb-6">Resume</h3>
-    <a href="https://drive.google.com/file/d/1sm1rwA6zn1fYm3942onxmodrvNFbE5oJ/view?usp=sharing" download
+    <a href="https://drive.google.com/file/d/1JR3PR0IjShIBoQh_RhCffZxvKuYKoI3L/view?usp=drive_link" download
       class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-blue-700 transition-all duration-300 ease-in-out"
       style="font-family: 'Poppins', sans-serif;">
       ⬇️ Download My Resume
     </a>
   </section>
+
+
+  <!-- Certificates -->
+<section id="certificates" class="py-16 px-4 bg-white">
+  <div class="max-w-5xl mx-auto">
+    <h3 class="text-2xl sm:text-3xl font-semibold mb-6 text-center">Certifications</h3>
+    <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-6">
+
+      <!-- Certificate 1 -->
+      <a href="https://coursera.org/share/545b39f14d577e1806f5b8b2ef2259f4" target="_blank"
+         class="block p-4 bg-gray-100 rounded-lg shadow hover:bg-blue-50 transition duration-300 hover:scale-105">
+        <h4 class="font-bold text-lg text-gray-800 mb-1">Supervised Machine Learning - Regression and Classification</h4>
+        <p class="text-sm text-gray-600">Coursera · Andrew Ng · 2024</p>
+      </a>
+
+      <!-- Certificate 2 -->
+      <a href="https://coursera.org/share/224703080ece45662c34ca8fdb11b3e6" target="_blank"
+         class="block p-4 bg-gray-100 rounded-lg shadow hover:bg-green-50 transition duration-300 hover:scale-105">
+        <h4 class="font-bold text-lg text-gray-800 mb-1">Advanced Learning Algorithms</h4>
+        <p class="text-sm text-gray-600">Coursera · Andrew Ng · 2024</p>
+      </a>
+
+      <!-- Certificate 3 -->
+      <a href="https://coursera.org/share/8933bbf0293f3a58d10d25bbc14bea02" target="_blank"
+         class="block p-4 bg-gray-100 rounded-lg shadow hover:bg-purple-50 transition duration-300 hover:scale-105">
+        <h4 class="font-bold text-lg text-gray-800 mb-1">Unsupervised Learning, Recommenders, Reinforcement Learning</h4>
+        <p class="text-sm text-gray-600">Coursera · Andrew Ng · 2025</p>
+      </a>
+
+      <a href="https://coursera.org/share/fa4c0001d6ee2c6be069ee2a55dc74b4" target="_blank"
+         class="block p-4 bg-gray-100 rounded-lg shadow hover:bg-purple-50 transition duration-300 hover:scale-105">
+        <h4 class="font-bold text-lg text-gray-800 mb-1">Machine Learning</h4>
+        <p class="text-sm text-gray-600">Coursera · Andrew Ng · 2025</p>
+      </a>
+
+      <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/MBA4MnZTNFEoJZGnk/wNge9cjzNTXD2acrv_MBA4MnZTNFEoJZGnk_dc5dq5T3E6aNPcCM5_1749920713788_completion_certificate.pdf" target="_blank"
+         class="block p-4 bg-gray-100 rounded-lg shadow hover:bg-purple-50 transition duration-300 hover:scale-105">
+        <h4 class="font-bold text-lg text-gray-800 mb-1">Goldman Sachs Operations Job Simulation</h4>
+        <p class="text-sm text-gray-600">Forage · 2025</p>
+      </a>
+
+      <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/pmnMSL4QiQ9JCgE3W/kkE9HyeNcw6rwCRGw_pmnMSL4QiQ9JCgE3W_dc5dq5T3E6aNPcCM5_1750233733199_completion_certificate.pdf" target="_blank"
+         class="block p-4 bg-gray-100 rounded-lg shadow hover:bg-purple-50 transition duration-300 hover:scale-105">
+        <h4 class="font-bold text-lg text-gray-800 mb-1">AWS Solutions Architecture Job Simulation</h4>
+        <p class="text-sm text-gray-600">Forage · 2025</p>
+      </a>
+
+      <a href="https://drive.google.com/file/d/1znc71SsgnRz0YQmxksAuuaomNEX24X6l/view?usp=sharing" target="_blank"
+         class="block p-4 bg-gray-100 rounded-lg shadow hover:bg-purple-50 transition duration-300 hover:scale-105">
+        <h4 class="font-bold text-lg text-gray-800 mb-1">Parkinson Project Completion</h4>
+        <p class="text-sm text-gray-600">CHCI · IIT Mandi · 2025</p>
+      </a>
+
+      <a href="https://drive.google.com/file/d/1Wi6jxD3P2vyEA6fLbB1LpVKKmRrU_Zjl/view?usp=sharing" target="_blank"
+         class="block p-4 bg-gray-100 rounded-lg shadow hover:bg-purple-50 transition duration-300 hover:scale-105">
+        <h4 class="font-bold text-lg text-gray-800 mb-1">Krackhack 2.0</h4>
+        <p class="text-sm text-gray-600">GDSC · IIT Mandi · 2025</p>
+      </a>
+
+    </div>
+  </div>
+</section>
 
 
   <!-- Contact -->
