--- a/index.html
+++ b/index.html
@@ -192,6 +192,12 @@
         <p class="text-sm text-gray-600">Forage · 2025</p>
       </a>
 
+      <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/MBA4MnZTNFEoJZGnk/dC4ChhAkhpgB7QvGd_MBA4MnZTNFEoJZGnk_dc5dq5T3E6aNPcCM5_1753349485150_completion_certificate.pdf" target="_blank"
+         class="block p-4 bg-gray-100 rounded-lg shadow hover:bg-purple-50 transition duration-300 hover:scale-105">
+        <h4 class="font-bold text-lg text-gray-800 mb-1">Goldman Sachs Internal Audit Job Simulation</h4>
+        <p class="text-sm text-gray-600">Forage · 2025</p>
+      </a>
+
       <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/pmnMSL4QiQ9JCgE3W/kkE9HyeNcw6rwCRGw_pmnMSL4QiQ9JCgE3W_dc5dq5T3E6aNPcCM5_1750233733199_completion_certificate.pdf" target="_blank"
          class="block p-4 bg-gray-100 rounded-lg shadow hover:bg-purple-50 transition duration-300 hover:scale-105">
         <h4 class="font-bold text-lg text-gray-800 mb-1">AWS Solutions Architecture Job Simulation</h4>
