--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
      class="relative px-4 py-2 text-gray-700 transition-all duration-300 hover:text-white hover:bg-green-500 hover:border hover:border-green-500 rounded-lg hover:scale-105">
     Skills
   </a>
+  <a href="#competitive-programming"
+     class="relative px-4 py-2 text-gray-700 transition-all duration-300 hover:text-white hover:bg-red-500 hover:border hover:border-red-500 rounded-lg hover:scale-105">
+    Competitive Programming
+  </a>
   <a href="#projects"
      class="relative px-4 py-2 text-gray-700 transition-all duration-300 hover:text-white hover:bg-purple-500 hover:border hover:border-purple-500 rounded-lg hover:scale-105">
     Projects
@@ -99,6 +103,23 @@
   </div>
 </section>
 
+<!-- Competitive Programming Profiles -->
+<section id="competitive-programming" class="bg-white py-12 px-4">
+  <div class="max-w-5xl mx-auto">
+    <h3 class="text-2xl sm:text-3xl font-semibold mb-6 text-center">Competitive Programming</h3>
+    <div class="flex flex-col sm:flex-row justify-center items-center gap-6">
+      <a href="https://leetcode.com/u/abhinn_14/" target="_blank" class="flex items-center px-6 py-4 bg-gray-100 rounded-lg shadow hover:bg-yellow-100 transition text-lg font-bold text-gray-800 hover:text-yellow-600">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" alt="LeetCode" class="w-8 h-8 mr-3">LeetCode
+      </a>
+      <a href="https://codeforces.com/profile/abhinn_14" target="_blank" class="flex items-center px-6 py-4 bg-gray-100 rounded-lg shadow hover:bg-purple-100 transition text-lg font-bold text-gray-800 hover:text-purple-600">
+        <img src="https://sta.codeforces.com/s/84849/images/codeforces-logo-with-telegram.png" alt="Codeforces" class="w-15 h-8 mr-3">Codeforces
+      </a>
+      <a href="https://www.codechef.com/users/abhinn_14" target="_blank" class="flex items-center px-6 py-4 bg-gray-100 rounded-lg shadow hover:bg-red-100 transition text-lg font-bold text-gray-800 hover:text-blue-600">
+        <img src="https://s3.amazonaws.com/codechef_shared/sites/all/themes/abessive/logo.svg" alt="CodeChef" class="w-15 h-8 mr-3">CodeChef
+      </a>
+    </div>
+  </div>
+</section>
 
   <!-- Projects -->
 <section id="projects" class="max-w-5xl mx-auto py-16 px-4">
