--- a/index.html
+++ b/index.html
@@ -12,44 +12,71 @@
 
   <!-- Navbar -->
 <nav class="bg-white shadow-md fixed w-full z-10">
-  <div class="max-w-6xl mx-auto px-4 py-4 flex justify-between items-center">
-
-    <div class="flex items-center">
-      <img src="image.png" alt="A" class="w-14 h-13 sm:w-14 sm:h-14 object-contain" />
-      <span class="text-2xl font-bold text-gray-800 -ml-3">bhinn Goyal</span>
+  <div class="max-w-6xl mx-auto px-2 md:px-4 py-4 flex flex-wrap md:flex-nowrap justify-between items-center">
+    <div class="flex items-center -ml-2 md:ml-0">
+      <img src="image.png" alt="A" class="w-12 h-12 md:w-14 md:h-14 object-contain" />
+      <span class="text-xl md:text-2xl font-bold text-gray-800 -ml-2 md:-ml-3">bhinn Goyal</span>
     </div>
 
+    <!-- Hamburger Icon (Mobile) -->
+    <button id="menu-btn" class="md:hidden flex flex-col justify-center items-center w-10 h-10 focus:outline-none">
+      <span class="block w-6 h-0.5 bg-gray-800 mb-1"></span>
+      <span class="block w-6 h-0.5 bg-gray-800 mb-1"></span>
+      <span class="block w-6 h-0.5 bg-gray-800"></span>
+    </button>
 
     <!-- Navigation Links -->
-    <div class="flex flex-wrap gap-2 text-base sm:text-lg md:text-xl font-semibold mt-2 sm:mt-0">
-  <a href="#about"
-     class="relative px-4 py-2 text-gray-700 transition-all duration-300 hover:text-white hover:bg-blue-500 hover:border hover:border-blue-500 rounded-lg hover:scale-105">
-    About
-  </a>
-  <a href="#skills"
-     class="relative px-4 py-2 text-gray-700 transition-all duration-300 hover:text-white hover:bg-green-500 hover:border hover:border-green-500 rounded-lg hover:scale-105">
-    Skills
-  </a>
-  <a href="#competitive-programming"
-     class="relative px-4 py-2 text-gray-700 transition-all duration-300 hover:text-white hover:bg-red-500 hover:border hover:border-red-500 rounded-lg hover:scale-105">
-    Competitive Programming
-  </a>
-  <a href="#projects"
-     class="relative px-4 py-2 text-gray-700 transition-all duration-300 hover:text-white hover:bg-purple-500 hover:border hover:border-purple-500 rounded-lg hover:scale-105">
-    Projects
-  </a>
-  <a href="#resume"
-     class="relative px-4 py-2 text-gray-700 transition-all duration-300 hover:text-white hover:bg-pink-500 hover:border hover:border-pink-500 rounded-lg hover:scale-105">
-    Resume
-  </a>
-  <a href="#contact"
-     class="relative px-4 py-2 text-gray-700 transition-all duration-300 hover:text-white hover:bg-yellow-500 hover:border hover:border-yellow-500 rounded-lg hover:scale-105">
-    Contact
-  </a>
-</div>
-
+    <div id="nav-links" class="hidden md:flex flex-nowrap gap-1 md:gap-2 text-base md:text-lg font-semibold mt-2 md:mt-0 md:ml-6 bg-white md:bg-transparent absolute md:static top-16 left-0 w-full md:w-auto shadow md:shadow-none z-20 md:z-auto overflow-x-auto whitespace-nowrap">
+      <a href="#about"
+         class="block md:inline relative px-3 py-2 text-gray-700 transition-all duration-300 hover:text-white hover:bg-blue-500 hover:border hover:border-blue-500 rounded-lg hover:scale-105">
+        About
+      </a>
+      <a href="#skills"
+         class="block md:inline relative px-3 py-2 text-gray-700 transition-all duration-300 hover:text-white hover:bg-green-500 hover:border hover:border-green-500 rounded-lg hover:scale-105">
+        Skills
+      </a>
+      <a href="#competitive-programming"
+         class="block md:inline relative px-3 py-2 text-gray-700 transition-all duration-300 hover:text-white hover:bg-red-500 hover:border hover:border-red-500 rounded-lg hover:scale-105">
+        Competitive Programming
+      </a>
+      <a href="#projects"
+         class="block md:inline relative px-3 py-2 text-gray-700 transition-all duration-300 hover:text-white hover:bg-purple-500 hover:border hover:border-purple-500 rounded-lg hover:scale-105">
+        Projects
+      </a>
+      <a href="#certificates"
+         class="block md:inline relative px-3 py-2 text-gray-700 transition-all duration-300 hover:text-black hover:bg-green-500 hover:border hover:border-green-500 rounded-lg hover:scale-105">
+        Certificates
+      </a>
+      <a href="#resume"
+         class="block md:inline relative px-3 py-2 text-gray-700 transition-all duration-300 hover:text-white hover:bg-pink-500 hover:border hover:border-pink-500 rounded-lg hover:scale-105">
+        Resume
+      </a>
+      <a href="#contact"
+         class="block md:inline relative px-3 py-2 text-gray-700 transition-all duration-300 hover:text-white hover:bg-yellow-500 hover:border hover:border-yellow-500 rounded-lg hover:scale-105">
+        Contact
+      </a>
+    </div>
   </div>
 </nav>
+
+<script>
+  // Hamburger menu toggle
+  const menuBtn = document.getElementById('menu-btn');
+  const navLinks = document.getElementById('nav-links');
+  menuBtn.addEventListener('click', () => {
+    navLinks.classList.toggle('hidden');
+  });
+
+  // Close menu when a nav link is clicked (on mobile)
+  // Only applies if navLinks is currently visible (mobile)
+  navLinks.querySelectorAll('a').forEach(link => {
+    link.addEventListener('click', () => {
+      if (window.innerWidth < 640) { // sm breakpoint
+        navLinks.classList.add('hidden');
+      }
+    });
+  });
+</script>
 
 
   <!-- Hero Section -->
@@ -187,15 +214,7 @@
 </section>
 
 
-  <!-- Resume -->
-  <section id="resume" class="bg-gray-100 py-16 px-4 text-center">
-    <h3 class="text-2xl sm:text-3xl font-semibold mb-6">Resume</h3>
-    <a href="https://drive.google.com/file/d/1JR3PR0IjShIBoQh_RhCffZxvKuYKoI3L/view?usp=drive_link" download
-      class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-blue-700 transition-all duration-300 ease-in-out"
-      style="font-family: 'Poppins', sans-serif;">
-      ⬇️ Download My Resume
-    </a>
-  </section>
+  
 
 
   <!-- Certificates -->
@@ -268,6 +287,19 @@
     </div>
   </div>
 </section>
+
+
+
+
+<!-- Resume -->
+  <section id="resume" class="bg-gray-100 py-16 px-4 text-center">
+    <h3 class="text-2xl sm:text-3xl font-semibold mb-6">Resume</h3>
+    <a href="https://drive.google.com/file/d/1JR3PR0IjShIBoQh_RhCffZxvKuYKoI3L/view?usp=drive_link" download
+      class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-blue-700 transition-all duration-300 ease-in-out"
+      style="font-family: 'Poppins', sans-serif;">
+      ⬇️ Download My Resume
+    </a>
+  </section>
 
 
   <!-- Contact -->
