--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 <!-- Resume -->
   <section id="resume" class="bg-gray-100 py-16 px-4 text-center">
     <h3 class="text-2xl sm:text-3xl font-semibold mb-6">Resume</h3>
-    <a href="https://drive.google.com/file/d/165sW9TnEsZ9cTkiusU2PIGcSde1Lpcoq/view?usp=drive_link" download
+    <a href="https://drive.google.com/file/d/1sxLqCeR8kQ3f2jifAL5iUllggxhfiatF/view?usp=sharing" download
       class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-blue-700 transition-all duration-300 ease-in-out"
       style="font-family: 'Poppins', sans-serif;">
       ⬇️ Download My Resume
@@ -320,4 +320,5 @@
 
 </body>
 </html>
+
 
